<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowserFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/url"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_above="@+id/webbrowser"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/find"
            android:text="@string/Find"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_above="@+id/webbrowser"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/shan"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="17dp" />

        <WebView
            android:id="@+id/webbrowser"
            android:layout_width="match_parent"
            android:layout_height="580dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="1dp" />

    </RelativeLayout>

</FrameLayout>